--- a/dog.html
+++ b/dog.html
@@ -46,7 +46,7 @@
     <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
         <tr>
             <!-- <td><img src=" picture/背景.jpg" height="100" /></td> -->
-            <td width="100" align="center"><a href="demo.html" style="color: aliceblue;">主页</a></td>
+            <td width="100" align="center"><a href="index.html" style="color: aliceblue;">主页</a></td>
             <td width="100" align="center"><a href="haoyou.html" style="color: aliceblue;">我的偶像</a></td>
             <td width="100" align="center"><a href="photo.html" style="color: aliceblue;">我的相册</a></td>
             <td width="100" align="center"><a href="rizhi.html" style="color: aliceblue;">我的日志</a></td>
