--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     <tr>
                         <td>
                             <p>我的个人简介。 </p>
-                            <p>姓名：lz</p>
+                            <p>姓名：尚公子</p>
                             <p>性别：男</p>
-                            <p>生日：0809</p>
-                            <p>学校：某某大学</p>
-                            <p>爱好：摄影，乒乓球，学习，王者荣耀</p>
-                            <p>你看&#8212;&#8212;</p>
+                            <p>生日：9.24</p>
+                            <p>学校：西南民大</p>
+                            <p>爱好：足球，麻将，游戏</p>
+                            <p>你看&#8212;&#8212;></p>
                         </td>
                         <td><img src="picture/e73d87f6e58a71fedd6b7aa1a000585.jpg" width="320" height="567" /></td>
                     </tr>
@@ -58,16 +58,16 @@
                             <p>好吧，我承认我兴趣广泛。 </p>
                             <p>包括吃喝玩乐睡。 </p>
                             <p>当然还有一些低调奢华有内涵的部分了。 </p>
-                            <p>什么没事捧着我的小单反出去摄摄影啦。 </p>
-                            <p>闲的无聊用手捣鼓两下我的小钢琴啦。 </p>
+                            <p> 这点还没有编号，但是应该能编出来。 </p>
+                            <p>闲的无聊用手就挠挠勾子。 </p>
                             <p></p>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <p>什么吉他，竹笛，那都不在话下。嘿嘿。 </p>
+                            <p>什么吉他，竹笛，那都会不了一丁点。嘿嘿。 </p>
                             <p>是不是很崇拜我啊。 </p>
-                            <p>恩。。。我的朋友很多。但是敌人也很多。 </p>
+                            <p>恩。。。我的朋友很多。都是好大爹。 </p>
                             <p>综上所述要想更多地了解我，就来看看我的小世界吧。 </p>
                         </td>
                         <td><img src=" picture/376c37b626fd94e1b241d0df0c8d7cc.jpg" width="400" /></td>
