--- a/rizhi.html
+++ b/rizhi.html
@@ -26,11 +26,11 @@
     <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
         <tr>
             <!-- <td><img src="images/logo2.png" height="100" /></td> -->
-            <td width="100" align="center"><a href="demo.html" style="color: aliceblue;">主页</a></td>
-            <td width="100" align="center"><a href="haoyou.html" style="color: aliceblue;">我的偶像</a></td>
-            <td width="100" align="center"><a href="photo.html" style="color: aliceblue;">我的相册</a></td>
-            <td width="100" align="center"><a href="rizhi.html" style="color: aliceblue;">我的日志</a></td>
-            <td width="100" align="center"><a href="yinyue.html" style="color: aliceblue;">我的音乐</a></td>
+            <td width="100" align="center"><a href="index.html" style="color: brown;">主页</a></td>
+            <td width="100" align="center"><a href="haoyou.html" style="color: brown;">我的偶像</a></td>
+            <td width="100" align="center"><a href="photo.html" style="color: brown;">我的相册</a></td>
+            <td width="100" align="center"><a href="rizhi.html" style="color: brown;">我的日志</a></td>
+            <td width="100" align="center"><a href="yinyue.html" style="color: brown;">我的音乐</a></td>
         </tr>
     </table>
     <table width="800" border="0" align="center" cellpadding="0" cellspacing="0" class="main">
