--- a/yinyue.html
+++ b/yinyue.html
@@ -6,6 +6,20 @@
     <title>我的驿站</title>
     <link href="images/css.css" rel="stylesheet" type="text/css" />
     <style type="text/css">
+
+body {
+            /*加载背景图：图片地址 不平铺 */
+            background: url(picture/背景8.jpg) no-repeat center center;
+            /* 让背景图基于容器大小伸缩 */
+            background-size: cover;
+            /* background-attachment设置背景图像是否固定或者随着页面的其余部分滚动。
+                scroll 背景图片随着页面的滚动而滚动，这是默认的。
+                 fixed 背景图片不会随着页面的滚动而滚动。
+                  local 背景图片会随着元素内容的滚动而滚动。*/
+            background-attachment: fixed;
+
+
+        }
     </style>
 </head>
 
@@ -13,11 +27,11 @@
     <table width="100%" border="0" cellpadding="0" cellspacing="0" class="nav">
         <tr>
             <!-- <td><img src="images/logo2.png" height="100" /></td> -->
-            <td width="100" align="center"><a href="demo.html" style="color: white;">主页</a></td>
-            <td width="100" align="center"><a href="haoyou.html" style="color: aliceblue;">我的偶像</a></td>
-            <td width="100" align="center"><a href="photo.html" style="color: aliceblue;">我的相册</a></td>
-            <td width="100" align="center"><a href="rizhi.html" style="color: aliceblue;">我的日志</a></td>
-            <td width="100" align="center"><a href="yinyue.html" style="color: aliceblue;">我的音乐</a></td>
+            <td width="100" align="center"><a href="index.html" style="color: black;">主页</a></td>
+            <td width="100" align="center"><a href="haoyou.html" style="color: black;">我的偶像</a></td>
+            <td width="100" align="center"><a href="photo.html" style="color: black;">我的相册</a></td>
+            <td width="100" align="center"><a href="rizhi.html" style="color: black;">我的日志</a></td>
+            <td width="100" align="center"><a href="yinyue.html" style="color: black;">我的音乐</a></td>
         </tr>
     </table>
     <table width="800" border="0" align="center" cellpadding="0" cellspacing="0" class="main">
