--- a/yinyue.html
+++ b/yinyue.html
@@ -79,7 +79,7 @@ body {
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><img src="images/g.jpg" width="300" border="0" /></td>
+                                    <td><img src="picture/171d643a819295348d60a96154aeed8.jpg" width="300" border="0" /></td>
                                 </tr>
                                 <tr>
                                     <td>&nbsp;</td>
