修改身高体重单位

--- a/dog.html
+++ b/dog.html
@@ -70,10 +70,10 @@
     <br><br><br>
     <div class="introduce">
         <ul>
-            <li>姓名：尚鹏斌</li>
-            <li>性别：男</li>
-            <li>身高：175</li>
-            <li>体重：65</li>
+            <li><strong><姓名：尚鹏斌/strong></li>
+            <li><strong>性别：男</strong></li>
+            <li><strong>身高：175cm</strong></li>
+            <li><strong>体重：65kg</strong></li>
         </ul>
     </div>
 
