--- a/dog.html
+++ b/dog.html
@@ -70,7 +70,7 @@
     <br><br><br>
     <div class="introduce">
         <ul>
-            <li><strong><姓名：尚鹏斌/strong></li>
+            <li><strong>姓名：尚鹏斌</strong></li>
             <li><strong>性别：男</strong></li>
             <li><strong>身高：175cm</strong></li>
             <li><strong>体重：65kg</strong></li>
