--- a/yinyue.html
+++ b/yinyue.html
@@ -44,13 +44,13 @@ body {
                     <tr>
                         <td colspan="2">
                             <div class="title">
-                                <p>我的音乐</p>
+                                <!-- <p>我的音乐</p> -->
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td valign="top">
-                            <p>　　引 </p>
+                            <!-- <p>　　引 </p> -->
                             <p>我与音乐 </p>
                             <p>我和我的钢琴是最好的伙伴。 </p>
                             <p>没有家人陪伴的日子，我用手指在琴键上敲出一个个充满温暖的琴音。 </p>
