--- a/rizhi.html
+++ b/rizhi.html
@@ -49,26 +49,30 @@
                     </tr>
                     <tr>
                         <td valign="top">
-                            <p>　　其实，我喜欢上学，只是不喜欢上课，怀念那些曾经一起闹，一起笑的时光。<br />
+                            <p>　  其实，我喜欢上学，只是不喜欢上课，怀念那些曾经一起闹，一起笑的时光。<br />
                                 <br />
                                 <img width="450"   src="picture/c565c74ebe27a886b31d952a53dccb8.jpg" /><br />
+                                <video controls src="./picture/跳舞1.mp4" width="500"></video>
                                 <br />
-
+                                  
                                 &#160;好朋友不需要太多，两个就够了，一个肯把钱借给你，当他向你要债时，另一个肯把他打死。<br />
                                 <br />
                                 <img width="500" height="353" src="picture/5ea6c90ffc14128b26c6527f00cdd6e.jpg" />&#160;<br />
+                                <video controls src="./picture/跳舞2.mp4" width="500"></video>
                                 <br />
 
                                 &#160;生活坏到一定程度就会好起来，因为他无法更坏。努力过后，才知道许多事情，坚持坚持，就过来了&#8212;&#8212;<br />
                                 <br />
                                 &#160;<img width="349"  
                                     src="picture/130a30d22040004cf41185c449a9467.jpg" /><br />
+                                    <video src="./picture/跳舞3.mp4" controls width="500"></video>
                                 <br />
 
                             <p><br />
                                 &#160;别在喜悦时承诺，别在悲伤时回答，别在愤怒时决定。<br />
                                 &#160; </p>
                             <p><img width="500" height="375" src="picture/5ea6c90ffc14128b26c6527f00cdd6e.jpg" /><br />
+                                <video src="./picture/跳舞4.mp4" controls width="500"></video>
                                 <br />
 
                             <p><br />
